# sparkstat

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: publish.yml
src/sparkstat/: cli.py
