[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sparkstat"
dynamic = ["version"]
description = "Real-time GPU monitor for NVIDIA DGX Spark and other unified memory (UMA) systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["nvidia", "dgx", "gpu", "monitor", "uma", "sparkstat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: System :: Monitoring",
]

[project.scripts]
sparkstat = "sparkstat.cli:main"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.1"

[tool.hatch.build.targets.wheel]
packages = ["src/sparkstat"]
